Dashboard/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: bd-bd-gr-05
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Optional: for HTTPS
spec:
  tls:
    - hosts:
        - dashboard-api.yourdomain.com
        - dashboard.yourdomain.com
      secretName: dashboard-tls
  ingressClassName: nginx
  rules:
    - host: dashboard-api.yourdomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-backend-service
                port:
                  number: 3000
    - host: dashboard.yourdomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-frontend-service
                port:
                  number: 3000
